--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ beautifulsoup4==4.7.1
 certifi==2019.3.9
 chardet==3.0.4
 idna==2.8
+PyMySQL==0.9.3
 PyYAML==5.1.1
 soupsieve==1.9.1
 urllib3==1.25.3
